# VaePresetGen

./: .gitignore  main.py  pyproject.toml
dataset/: dataset.py
model/: model.py  trainer.py
model/decoder/: dsa_transformer.py
model/encoder/: clap.py
model/loss/: kl_loss.py  param_loss.py
utils/: plot.py  synth1_params.py  types.py
